tests/check_output/snapshots/errors__check_output__main@component_on_impl.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: expected `trait`
       
         = help: `#[component(...)]` is expected to be placed on a trait
       
  --> examples/component_on_impl.rs:43:1
   |
43 | impl<H: Heater, P: Pump> CoffeeShop<H, P> {
   | ^^^^

error[E0412]: cannot find type `DirkCoffeeShop` in this scope
  --> examples/component_on_impl.rs:20:24
   |
20 |     let coffee_shop = <DirkCoffeeShop as dirk::DirkComponent<_>>::builder().build();
   |                        ^^^^^^^^^^^^^^ help: a struct with a similar name exists: `CoffeeShop`
...
31 | struct CoffeeShop<H: Heater, P: Pump> {
   | ------------------------------------- similarly named struct `CoffeeShop` defined here

For more information about this error, try `rustc --explain E0412`.
error: could not compile `coffee` (example "component_on_impl") due to 2 previous errors
